app/src/test/resources/programs/invalid/arrays/nonArrayTypeAccessedAsArray.exe
// Int cannot be used as an array
foo main() -> Int = {
    let mut x: Int = 7;
    x[0] = 1;
    x[1] = 2;
    x[0] + x[1]
}
